--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,23 @@ html {
   scroll-padding-top: 120px;
   scroll-behavior: smooth;
   font-size: 16px;
+  // overflow-y: hidden;
+}
+
+.container {
+  @media (min-width: $sm) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    * {
+      max-width: 540px;
+    }
+  }
+
+  @media (min-width: $md) {
+    background-color: lightcyan;
+  }
 }
 
 /* Header */
@@ -23,37 +40,46 @@ html {
   position: fixed;
   z-index: 1;
   width: 100vw;
-  height: 60px;
-  // height: 70px;
-  padding: 0 16px 0 4px;
+  // height: 60px;
+  padding: 10px 20px;
 
   background: #182025;
+
+  @media (min-width: $sm) {
+    padding: 16px 26px;
+  }
+
+  // height: 70px;
 }
 
 #header-logo {
   width: 36px;
   // width: 45.51px;
   height: auto;
+  margin-left: -6px;
 }
 
 #header h1 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 1.125rem;
   // font-size: 21px;
-  margin: 0;
-  
-  color: #E0E7EB;
+
+  color: #e0e7eb;
 }
 
 #menu {
   width: 20px;
   height: 10px;
-  background: #E0E7EB;
+  background: #e0e7eb;
   margin-left: auto;
   position: relative;
-  right: 20px;
+  right: 40px;
+
+  @media (min-width: $sm) {
+    right: 42px;
+  }
 }
 
 #menu a {
@@ -63,7 +89,7 @@ html {
 }
 
 #menu a::after {
-  content:"";
+  content: "";
   display: block;
   position: relative;
   width: 25px;
@@ -86,7 +112,7 @@ html {
   // top: 70px;
   padding-top: 50px;
   padding-bottom: 50px;
-  background: #E4E6E7;
+  background: #e4e6e7;
 
   display: none;
 }
@@ -97,12 +123,12 @@ html {
   // position: relative;
   // left: 40px;
 
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
-  color: #202B31;
+  color: #202b31;
 }
 
 .padding-bottom {
@@ -114,13 +140,13 @@ html {
 }
 
 .nav-link::before {
-  content:"";
+  content: "";
   display: inline-block;
   // position: relative;
   // width: 10px;
   // height: 10px;
   margin-right: 15px;
-  background: #202B31;
+  background: #202b31;
 }
 
 /* Main Content */
@@ -130,22 +156,22 @@ main {
 
 .main-section header {
   margin-top: 3rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 1.5rem;
   // font-size: 36px;
-  color: #202B31;
+  color: #202b31;
 }
 
 .main-section p,
 .main-section a {
   margin-top: 1rem;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 1rem;
-  color: #202B31;
+  color: #202b31;
 }
 
 .main-section a {
@@ -161,11 +187,11 @@ main {
   left: 20px;
   width: calc(100% - 20px);
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 1rem;
-  color: #202B31;
+  color: #202b31;
 }
 
 .why-jsx-li {
@@ -183,8 +209,7 @@ main {
 
 .main-section pre {
   position: relative;
-  background: #202B31;
-  border-radius: 8px;
+  background: #202b31;
   padding: 1.5rem 1.5rem;
   // padding: 15px 0 15px 50px;
   margin: 2rem 0;
@@ -192,12 +217,12 @@ main {
   overflow-y: hidden;
   scrollbar-width: thin;
 
-  font-family: 'Inconsolata', monospace;
+  font-family: "Inconsolata", monospace;
   font-style: normal;
   font-weight: normal;
   font-size: 1rem;
   line-height: 1.3rem;
-  color: #E0E7EB;
+  color: #e0e7eb;
 }
 
 #footer {
@@ -207,28 +232,32 @@ main {
   // height: 120px;
   // left: 400px;
   background: #182025;
+
+  @media (min-width: $sm) {
+    padding: 16px 26px;
+  }
 }
 
 #footer h1 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 1rem;
   // font-size: 21px;
   // line-height: 29px;
-  color: #E0E7EB;
+  color: #e0e7eb;
 }
 
 #footer p {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 0.9rem;
-  color: #E0E7EB;
+  color: #e0e7eb;
 }
 
 .ref-link {
-  color: #E0E7EB;
+  color: #e0e7eb;
   font-weight: bold;
   text-decoration: underline;
 }
