--- a/styles/style.css
+++ b/styles/style.css
@@ -7,18 +7,9 @@ html {
   scroll-padding-top: 120px;
   scroll-behavior: smooth;
   font-size: 16px; }
-
-@media (min-width: 576px) {
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    .container * {
-      max-width: 540px; } }
-
-@media (min-width: 768px) {
-  .container {
-    background-color: lightcyan; } }
+  @media (min-width: 992px) {
+    html {
+      font-size: 17px; } }
 
 /* Header */
 #header {
@@ -26,7 +17,7 @@ html {
   align-items: center;
   justify-content: flex-start;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   width: 100vw;
   padding: 10px 20px;
   background: #182025; }
@@ -38,13 +29,16 @@ html {
   width: 36px;
   height: auto;
   margin-left: -6px; }
+  @media (min-width: 992px) {
+    #header-logo {
+      width: 45.51px; } }
 
 #header h1 {
   font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 1.125rem;
-  color: #e0e7eb; }
+  color: #61dafb; }
 
 #menu {
   width: 20px;
@@ -55,7 +49,7 @@ html {
   right: 40px; }
   @media (min-width: 576px) {
     #menu {
-      right: 42px; } }
+      right: 52px; } }
 
 #menu a {
   display: block;
@@ -73,42 +67,65 @@ html {
 
 /* Navigation Bar */
 #navbar {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
+  display: none;
   position: fixed;
-  overflow: scroll;
-  z-index: 1;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background: #e4e6e7;
-  display: none; }
+  right: 0;
+  top: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 270px;
+  height: 100vh;
+  padding: 46px 20px 0 20px;
+  background: #f7f7f7; }
+  @media (min-width: 576px) {
+    #navbar {
+      padding-top: 58px; } }
+  @media (min-width: 768px) {
+    #navbar {
+      display: block;
+      z-index: 1; } }
+  @media (min-width: 992px) {
+    #navbar {
+      padding-top: 64px; } }
 
-#navbar header,
+#navbar header {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin-top: 3rem;
+  color: #202b31; }
+
+#navbar ul {
+  position: relative;
+  list-style-type: square;
+  left: 20px;
+  margin-bottom: calc(50px + 3rem); }
+
+#navbar li {
+  padding-top: 16px; }
+
 .nav-link {
-  flex-basis: content;
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
   color: #202b31; }
 
-.padding-bottom {
-  padding-bottom: 90px; }
-
-#navbar header {
-  font-weight: 600; }
-
-.nav-link::before {
-  content: "";
-  display: inline-block;
-  margin-right: 15px;
-  background: #202b31; }
-
 /* Main Content */
-main {
-  padding: 50px 20px; }
+#main-doc {
+  padding: 46px 20px 50px 20px; }
+  @media (min-width: 576px) {
+    #main-doc {
+      padding: 58px calc(-26px + 8vw) 50px calc(-26px + 8vw); } }
+  @media (min-width: 768px) {
+    #main-doc {
+      width: calc(100% - 310px - calc(calc(-26px + 8vw) * 2)); } }
+  @media (min-width: 992px) {
+    #main-doc {
+      padding: 64px calc(-26px + 8vw) 50px calc(-26px + 8vw); } }
 
 .main-section header {
   margin-top: 3rem;
@@ -125,6 +142,7 @@ main {
   font-style: normal;
   font-weight: normal;
   font-size: 1rem;
+  line-height: 1.5rem;
   color: #202b31; }
 
 .main-section a {
@@ -166,7 +184,7 @@ main {
   font-style: normal;
   font-weight: normal;
   font-size: 1rem;
-  line-height: 1.3rem;
+  line-height: 1.5rem;
   color: #e0e7eb; }
 
 #footer {
@@ -175,6 +193,9 @@ main {
   @media (min-width: 576px) {
     #footer {
       padding: 16px 26px; } }
+  @media (min-width: 768px) {
+    #footer {
+      width: calc(100% - 310px - 52px); } }
 
 #footer h1 {
   font-family: "Open Sans", sans-serif;
