--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,22 +12,9 @@ html {
   scroll-padding-top: 120px;
   scroll-behavior: smooth;
   font-size: 16px;
-  // overflow-y: hidden;
-}
 
-.container {
-  @media (min-width: $sm) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    * {
-      max-width: 540px;
-    }
-  }
-
-  @media (min-width: $md) {
-    background-color: lightcyan;
+  @media (min-width: $lg) {
+    font-size: 17px;
   }
 }
 
@@ -38,9 +25,8 @@ html {
   justify-content: flex-start;
 
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   width: 100vw;
-  // height: 60px;
   padding: 10px 20px;
 
   background: #182025;
@@ -48,15 +34,16 @@ html {
   @media (min-width: $sm) {
     padding: 16px 26px;
   }
-
-  // height: 70px;
 }
 
 #header-logo {
   width: 36px;
-  // width: 45.51px;
   height: auto;
   margin-left: -6px;
+
+  @media (min-width: $lg) {
+    width: 45.51px;
+  }
 }
 
 #header h1 {
@@ -64,9 +51,8 @@ html {
   font-style: normal;
   font-weight: 600;
   font-size: 1.125rem;
-  // font-size: 21px;
 
-  color: #e0e7eb;
+  color: #61dafb;
 }
 
 #menu {
@@ -78,7 +64,7 @@ html {
   right: 40px;
 
   @media (min-width: $sm) {
-    right: 42px;
+    right: 52px;
   }
 }
 
@@ -100,58 +86,78 @@ html {
 
 /* Navigation Bar */
 #navbar {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-  position: fixed;
-  overflow: scroll;
-  z-index: 1;
-
-  // width: 400px;
-  // height: calc(100% - 70px);
-  // top: 70px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background: #e4e6e7;
-
   display: none;
-}
+  position: fixed;
+  right: 0;
+  top: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 
-#navbar header,
-.nav-link {
-  flex-basis: content;
-  // position: relative;
-  // left: 40px;
+  width: 270px;
+  height: 100vh;
+  padding: 46px 20px 0 20px;
+  background: #f7f7f7;
 
-  font-family: "Montserrat", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  color: #202b31;
-}
+  @media (min-width: $sm) {
+    padding-top: 58px;
+  }
 
-.padding-bottom {
-  padding-bottom: 90px;
+  @media (min-width: $md) {
+    display: block;
+    z-index: 1;
+  }
+
+  @media (min-width: $lg) {
+    padding-top: 64px;
+  }
 }
 
 #navbar header {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
   font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.5rem;
+
+  margin-top: 3rem;
+  color: #202b31;
 }
 
-.nav-link::before {
-  content: "";
-  display: inline-block;
-  // position: relative;
-  // width: 10px;
-  // height: 10px;
-  margin-right: 15px;
-  background: #202b31;
+#navbar ul {
+  position: relative;
+  list-style-type: square;
+  left: 20px;
+  margin-bottom: calc(50px + 3rem);
+}
+
+#navbar li {
+  padding-top: 16px;
+}
+
+.nav-link {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+  color: #202b31;
 }
 
 /* Main Content */
-main {
-  padding: 50px 20px;
+#main-doc {
+  padding: 46px 20px 50px 20px;
+
+  @media (min-width: $sm) {
+    padding: 58px calc(-26px + 8vw) 50px calc(-26px + 8vw);
+  }
+
+  @media (min-width: $md) {
+    width: calc(100% - 310px - calc(calc(-26px + 8vw) * 2));
+  }
+
+  @media (min-width: $lg) {
+    padding: 64px calc(-26px + 8vw) 50px calc(-26px + 8vw);
+  }
 }
 
 .main-section header {
@@ -160,7 +166,6 @@ main {
   font-style: normal;
   font-weight: 700;
   font-size: 1.5rem;
-  // font-size: 36px;
   color: #202b31;
 }
 
@@ -171,6 +176,7 @@ main {
   font-style: normal;
   font-weight: normal;
   font-size: 1rem;
+  line-height: 1.5rem;
   color: #202b31;
 }
 
@@ -211,7 +217,6 @@ main {
   position: relative;
   background: #202b31;
   padding: 1.5rem 1.5rem;
-  // padding: 15px 0 15px 50px;
   margin: 2rem 0;
   overflow: scroll;
   overflow-y: hidden;
@@ -221,20 +226,20 @@ main {
   font-style: normal;
   font-weight: normal;
   font-size: 1rem;
-  line-height: 1.3rem;
+  line-height: 1.5rem;
   color: #e0e7eb;
 }
 
 #footer {
-  // position: relative;
-  // width: calc(100% - 400px);
   padding: 10px 20px;
-  // height: 120px;
-  // left: 400px;
   background: #182025;
 
   @media (min-width: $sm) {
     padding: 16px 26px;
+  }
+
+  @media (min-width: $md) {
+    width: calc(100% - 310px - 52px);
   }
 }
 
@@ -243,8 +248,6 @@ main {
   font-style: normal;
   font-weight: 600;
   font-size: 1rem;
-  // font-size: 21px;
-  // line-height: 29px;
   color: #e0e7eb;
 }
 
