--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,12 @@ html {
     html {
       font-size: 17px; } }
 
+@media (min-width: 768px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; } }
+
 /* Header */
 #header {
   display: flex;
@@ -18,6 +24,7 @@ html {
   justify-content: flex-start;
   position: fixed;
   z-index: 2;
+  box-sizing: border-box;
   width: 100vw;
   padding: 10px 20px;
   background: #182025; }
@@ -34,6 +41,7 @@ html {
       width: 45.51px; } }
 
 #header h1 {
+  margin-right: auto;
   font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 600;
@@ -44,12 +52,7 @@ html {
   width: 20px;
   height: 10px;
   background: #e0e7eb;
-  margin-left: auto;
-  position: relative;
-  right: 40px; }
-  @media (min-width: 576px) {
-    #menu {
-      right: 52px; } }
+  position: relative; }
 
 #menu a {
   display: block;
@@ -69,7 +72,7 @@ html {
 #navbar {
   display: none;
   position: fixed;
-  right: 0;
+  left: 0;
   top: 0;
   overflow-y: auto;
   overflow-x: hidden;
