--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,6 +18,14 @@ html {
   }
 }
 
+body {
+  @media (min-width: $md) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+}
+
 /* Header */
 #header {
   display: flex;
@@ -26,6 +34,7 @@ html {
 
   position: fixed;
   z-index: 2;
+  box-sizing: border-box;
   width: 100vw;
   padding: 10px 20px;
 
@@ -47,6 +56,8 @@ html {
 }
 
 #header h1 {
+  margin-right: auto;
+
   font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 600;
@@ -59,13 +70,7 @@ html {
   width: 20px;
   height: 10px;
   background: #e0e7eb;
-  margin-left: auto;
   position: relative;
-  right: 40px;
-
-  @media (min-width: $sm) {
-    right: 52px;
-  }
 }
 
 #menu a {
@@ -88,7 +93,7 @@ html {
 #navbar {
   display: none;
   position: fixed;
-  right: 0;
+  left: 0;
   top: 0;
   overflow-y: auto;
   overflow-x: hidden;
